# auxos_segwayrmp400

./: .gitignore  CMakeLists.txt  README.md  RobotControl.ipynb  stack.xml
segway_joy_teleop/: CMakeLists.txt  README.md  package.xml
segway_joy_teleop/launch/: teleop.launch
segway_joy_teleop/scripts/: segway_joy_teleop.py
segwayrmp400_description/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
segwayrmp400_description/launch/: display.launch  display.vcg  rviz.launch  sim.rviz  transforms.launch
segwayrmp400_description/meshes/: dual_em61_trailer.stl  em61.stl  segwayrmp400_wheel.dae  segwayrmp400_wheel.stl
segwayrmp400_description/urdf/: dual_em61_trailer.urdf.xacro  segwayrmp400.urdf.xacro
segwayrmp400_sim/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
segwayrmp400_sim/builder/: SegwayOutdoor.py  SegwayOutdoorWTrailer.py
segwayrmp400_sim/data/: simple_path.txt
segwayrmp400_sim/launch/: controller_node.launch  controller_node_debug.launch  data_logging.launch  display.launch  display.vcg  load_path.launch  morse_sim.launch  morse_sim_w_trailer.launch  path_following.launch  path_following_debug.launch  segway_morse.launch  sim_w_controller.launch  sim_w_trailer_controller.launch  teleop.launch  teleop_w_safety.launch  test_path_following.launch  test_path_following_direct_load.launch  test_path_following_no_sim.launch  trailer_controller_node.launch  trailer_estimator.launch  trailer_path_following_test.launch
segwayrmp440/: CMakeLists.txt  package.xml
segwayrmp440/conf/: RMP_440_OCU_CONFIG_DEFAULT.inf  analyzers.yaml
segwayrmp440/launch/: aggregator.launch  all.launch  all_robot.launch  all_trailer.launch  dual_em61.launch  joy_to_twist.launch  propak.launch  robot_controller_node.launch  robot_gps.launch  robot_transforms.launch  safety_controller_w_trailer.launch  segway.launch  segway_joy_teleop.launch  span.launch  teleop.launch  topicLogger_server.launch  topic_throttle.launch  topic_throttle_robot.launch  topic_throttle_trailer.launch  trailer_controller_node.launch  trailer_estimator.launch  trailer_gps.launch  trailer_transforms.launch
