<?xml version="1.0"?>
<package>
  <name>segway_joy_teleop</name>
  <version>1.0.0</version>
  <description>Takes a joy sensor message 
    and produces a cmd_vel command</description>

  <maintainer email="david.hodo@is4s.com">David Hodo</maintainer>

  <license>BSD</license>

  <author email="wjwwood@gmail.com">William Woodall</author> 
  <author email="david.hodo@is4s.com">David Hodo</author> 


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>libsegwayrmp440</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>libsegwayrmp440</run_depend>

</package>